--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -8,7 +8,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank">侵大陆并定殖 草地贪夜蛾明年恐进暴发阶段</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-954036218-150x120.jpg" align ="left"></a>中共农业农村部称，草地贪夜蛾今年入侵大陆并定殖，明年恐进入爆发阶段，春季向长江流域迁飞的时间会比2019年提前1个月左右，造成的危害预计会比2019年更大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/9/n11711410.md#1" target="_blank">阴霾袭华北黄淮 北京等55城发重污染预警</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/9/n11711410.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111262611086-150x120.jpg" align ="left"></a>阴霾大面积持续多日笼罩大陆华北、黄淮、江汉等地区，截至12月9日，有55个城市启动重污染天气预警。其中，北京市达“5级重度污染”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/5/n11702300.md#1" target="_blank">大陆数百万“蓝嘴唇”病人靠吃伟哥续命</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/5/n11702300.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/1312271502051528-150x120.jpg" align ="left"></a>大陆年仅8岁的河南许昌女孩小雅（化名）每天要靠吃“伟哥”（也被叫做“西地那非”，是俗称的壮阳药）维持生命，不是电影情节，而是真实的故事，触动了很多人的神经。12月5日，澎湃新闻的长篇报导，曝光大陆有数百万像小雅一样、靠“伟哥”类药物续命的病人群体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11725870.md#1" target="_blank">河南高速现多起事故 5人惊慌逃生坠桥死亡</a><br></h3>12月15日晚上7时许，因雨雪天气，河南省三门峡市连霍高速K795连续发生多起交通事故，5名司乘人员惊慌中逃生，翻越墙式护栏意外坠桥死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 7:47 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/4/n11701064.md#1" target="_blank">习近平6年“脱贫”期限近 各地政府忙造假</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/4/n11701064.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fupin-150x120.jpg" align ="left"></a>中共总书记习近平曾提出“2020年全民脱贫”的政纲，然而2020年将至，许多地方干部恐惧因无法达到要求遭到问责，而纷纷演戏造假。所谓2020年消灭绝对贫困人口，是否梦一场呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11725328.md#1" target="_blank">湖南新晃县一中操场埋尸案明日开审</a><br></h3>曾轰动一时的湖南新晃县一中“操场埋尸案”，明日（12月17日）将公开庭审。嫌疑人杜少平被指控犯故意杀人罪、故意伤害罪、寻衅滋事罪、非法拘禁罪、聚众斗殴罪、强迫交易罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/14/n11722469.md#1" target="_blank">山东一动物园维修工疑被机器挤压身亡</a><br></h3>12月13日，山东济南市天桥区的济南动物园一名维修工人疑似被游乐场机器挤压，当场身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/13/n11720210.md#1" target="_blank">经常接触生禽无防护 湖南菜场小贩染布病</a><br></h3>继中国农科院兰州兽医研究所至少96人被感染布鲁氏菌病（布病）、哈尔滨兽医研究所13名学生感染布病后，湖南永州一菜场小贩也被发现感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:24 PM							</td></tr>
